--- a/angular/package.json
+++ b/angular/package.json
@@ -31,6 +31,7 @@
     "@angular/platform-browser": "~20.0.0",
     "@angular/platform-browser-dynamic": "~20.0.0",
     "@angular/router": "~20.0.0",
+    "@swimlane/ngx-datatable": "^22.0.0",
     "bootstrap-icons": "~1.8.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.0.0",
@@ -44,17 +45,17 @@
     "@angular-eslint/eslint-plugin-template": "~20.0.0",
     "@angular-eslint/schematics": "~20.0.0",
     "@angular-eslint/template-parser": "~20.0.0",
+    "@angular/build": "~20.0.0",
     "@angular/cli": "~20.0.0",
     "@angular/compiler-cli": "~20.0.0",
     "@angular/language-service": "~20.0.0",
-    "@angular/build": "~20.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "~20.11.0",
     "@typescript-eslint/eslint-plugin": "7.16.0",
     "@typescript-eslint/parser": "7.16.0",
     "eslint": "^8.0.0",
     "jasmine-core": "~4.0.0",
-    "karma": "~6.3.0",
+    "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
